fix: get rid of double border situation on list page with "next page" button shown

--- a/example/src/admin/styles.module.css
+++ b/example/src/admin/styles.module.css
@@ -36,6 +36,9 @@
   height: 48px;
   border-bottom: 1px solid var(--gray-8);
 }
+.tableWrapper table tbody tr:last-child {
+  border-bottom: 0px;
+}
 .tableWrapper table tr > * {
   overflow: hidden;
   text-overflow: ellipsis;
@@ -101,6 +104,7 @@
 .tableNextPageIndicator {
   width: 100%;
   height: 48px;
+  border-top: 1px solid var(--gray-8);
 }
 .tableNextPageButton {
   font-family: inherit;
